--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-gradio
-numpy
-Pillow
+gradio>=3.23.0
+numpy>=1.21.0
+Pillow>=8.0.0
 git+https://github.com/facebookresearch/segment-anything.git
-torch
-torchvision
+torch>=1.9.0
+torchvision>=0.10.0
