--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,24 @@
 {
   "version": "0.2.0",
   "configurations": [
+    
+
+    
     {
       "name": "Python: samGui",
       "type": "python",
       "request": "launch",
       "program": "${workspaceFolder}/samGui.py",
       "console": "integratedTerminal"
+    },
+    {
+      "name": "Python: samGui (No Debug)",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/samGui.py",
+      "console": "integratedTerminal",
+      "justMyCode": true,
+      "noDebug": true
     }
   ]
 }
